# cpp-rest-service-template

./: .clang-format  .env.example  .gitignore  .gitmodules  CMakeLists.txt  ERD.sql  README.md  generate.sh  main.cpp
include/controllers/: ProjectController.h  RBACController.h  UserController.h
include/core/: Connection.h  DB.h  ODBConnection.h  StatusCodes.h  types.h
include/core/database/: Model.h  Model.inl  Schema.h
include/core/exceptions/: HttpException.h
include/helpers/: RequestHelper.h
include/middleware/: JwtAuth.h
include/models/: User.h
odb/model/: permission_roles.hxx  permissions.hxx  positions.hxx  roles.hxx  user_roles.hxx  userdatas.hxx  users.hxx
odb/src/: permission_roles-odb.cxx  permission_roles-odb.hxx  permissions-odb.cxx  permissions-odb.hxx  permissions-odb.ixx  permissions.sql  positions-odb.cxx  positions-odb.hxx  roles-odb.cxx  roles-odb.hxx  roles-odb.ixx  roles.sql  user_roles-odb.cxx  user_roles-odb.hxx  user_roles-odb.ixx  user_roles.sql  userdatas-odb.cxx  userdatas-odb.hxx  users-odb.cxx  users-odb.hxx  users-odb.ixx  users.sql
src/: main.cpp
src/controllers/: ProjectController.cpp  RBACController.cpp  UserController.cpp
src/core/: Connection.cpp  DB.cpp  ODBConnection.cpp
src/core/database/: Model.cpp  Schema.cpp
src/core/exceptions/: HttpException.cpp
src/helpers/: RequestHelper.cpp
src/middleware/: JwtAuth.cpp
src/models/: User.cpp
